# elights_jobes-research

./: .env  .gitattributes  .gitignore  Cargo.toml  README.md  docker-compose.yml  main.go  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile  main.rs
backend/core-api/: .env  Cargo.toml  Dockerfile  main.rs
backend/core-api/src/: db.rs  error.rs  lib.rs  main.rs
backend/core-api/src/config/: app_config.rs  bank_server.rs  database.rs  db.rs  ft_asset.rs  mod.rs  tls_config.rs
backend/core-api/src/handlers/: auth.rs  conversion.rs  crypto.rs  ft_integration.rs  mod.rs  payments.rs
backend/core-api/src/middlewares/: auth_guard.rs  ip_whitelist.rs  logger.rs  mod.rs
backend/core-api/src/models/: mod.rs
backend/core-api/src/routes/: auth.rs  conversion.rs  crypto.rs  ft_integration.rs  mod.rs  payment_rout.rs  payments.rs
backend/core-api/src/services/: ft_client.rs  mod.rs
backend/core-api/src/utils/: crypto_conversions.rs  http_clients.rs  mod.rs
backend/core-api/tests/: integration.rs
backend/domain/: Cargo.toml
backend/domain/crypto/: blindae.rs  utils.rs  wallet.rs  zk_proofs.rs
backend/domain/models/: account.rs  mod.rs  transaction.rs  user.rs
backend/domain/payments/: ach.rs  card.rs  check.rs  generator.rs  iso20022.rs  validator.rs  wire.rs
backend/domain/security/: audit.rs  auth.rs  oauth.rs  tls.rs
backend/domain/services/: analytics.rs  fraud_detection.rs  reporting.rs
backend/domain/src/: error.rs  lib.rs  utils.rs
backend/domain/src/crypto/: blindae.rs  mod.rs  utils.rs  wallet.rs  zk_proofs.rs
backend/domain/src/models/: account.rs  audit_log.rs  mod.rs  transaction.rs  user.rs  wallet.rs
backend/domain/src/payments/: ach.rs  card.rs  check.rs  gateway.rs  generator.rs  iso20022.rs  mod.rs  payment_processor.rs  rtgs.rs  swift_mt.rs  validator.rs  wire.rs
backend/domain/src/security/: audit.rs  auth.rs  hashing.rs  mod.rs  oauth.rs  tls.rs
backend/domain/src/services/: analytics.rs  fraud_detection.rs  mod.rs  reporting.rs
backend/src/: main.rs
backend/src/config/: db.rs  redis.rs
backend/src/controllers/: auth_controller.rs  mod.rs  payment_controller.rs
backend/src/middlewares/: auth.rs
backend/src/models/: mod.rs
backend/src/repositories/: mod.rs  payment_repository.rs  user_repository.rs
backend/src/services/: auth_service.rs  payment_service.rs
backend/src/utils/: crypto.rs
bank-integrations/: Cargo.toml  client_trait.rs
bank-integrations/ usa/: chase.rs  jpmorgan.rs  wells_fargo.rs
bank-integrations/bank-integrations/: test_bank_simulators.rs
bank-integrations/europe/: bnp_paribas.rs  deutsche_bank.rs  santander.rs
bank-integrations/simulators/: mod.rs  test_bank_simulators.rs
bank-integrations/src/: error.rs  lib.rs  models.rs
bank-integrations/src/ usa/: chase.rs  citibank.rs  jpmorgan.rs  mod.rs  wells_fargo.rs
bank-integrations/src/europe/: bnp_paribas.rs  deutsche_bank.rs  ing_group.rs  mod.rs  santander.rs
cryptography-exchange/: Cargo.toml  client.rs  conversion.rs
cryptography-exchange/btcpay/: client.rs
cryptography-exchange/src/: conversion.rs  error.rs  lib.rs  models.rs  monero_wallet.rs  rate_service.rs  utils.rs
cryptography-exchange/src/btcpay/: client.rs  mod.rs
cryptography-exchange/src/monero_wallet/: client.rs  json_rpc.rs  mod.rs
database/: init.sql  schema.rs
database/blindae_config/: config.toml
database/init/: init.sql
database/migrations/2025-04-16-000001_create_users/: up.sql
database/migrations/2025-04-16-000002_create_accounts/: up.sql
database/migrations/2025-04-16-000003_create_transactions/: up.sql
database/migrations/YYYY-MM-DD-HHMMSS_create_core_tables/: down.sql  up.sql
frontend/: .gitignore  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css  index.tsx  postcss.config.js  react-app-env.d.ts  react-router-dom.d.ts  reportWebVitals.ts  reportwebVital.js
frontend/src/components/: AchPayment.tsx  CryptoConversion.tsx  Dashboard.tsx  Login.tsx  Payment.tsx  Register.tsx  WireTransfer.tsx
frontend/src/pages/: DashboardPage.tsx  LandingPage.tsx  LoginPage.tsx  RegisterPage.tsx  index.html  paymentPage.tsx
frontend/src/services/: AuthService.ts  DashboardPage.ts  LoginPage.ts  RegisterPage.ts  UserService.ts
scripts/:  setup.sh  .env  env.example  setup.sh  start_all.sh
tor/: torrc
tor-network/: Cargo.toml  torrc
tor-network/clients/: cli-wallet.rs  node.rs
tor-network/p2p-network/: libp2p.rs  noise.rs  onion_overlay.rs
tor-network/src/: config.rs  error.rs  lib.rs
tor-network/src/clients/: cli_wallet.rs  mod.rs  node.rs
tor-network/src/p2p-network/: behaviour.rs  event_loop.rs  libp2p.rs  mod.rs  node.rs  noise.rs  onion_overlay.rs  transport.rs
