[package]
name = "payment-system"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.1"
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio"] }
bcrypt = "0.10"
rand = "0.8"
dotenv = "0.15"
async-stripe = { version = "0.39.1", features = ["runtime-tokio-hyper"] }
reqwest = { version = "0.11", features = ["json"] }
