# /home/inno/elights_jobes-research/bank-integrations/Cargo.toml
[package]
name = "bank-integrations"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0"
rand = "0.8" # For simulators
dotenv = "0.15" # To load API keys from .env (consider a dedicated config crate)
async-trait = "0.1" # If defining traits for bank clients

[dev-dependencies]
# Add test dependencies if needed