# /home/inno/elights_jobes-research/bank-integrations/Cargo.toml
[package]
name = "bank-integrations"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Async
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1" # For BankClient trait
futures = "0.3"

# Serialization / Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "1.0"

# Configuration
dotenv = "0.15"
once_cell = "1.17" # For lazy static initialization of clients if needed

# Utilities
log = "0.4"
uuid = { version = "1", features = ["v4"] } # If generating request IDs
rust_decimal = { version = "1.32", features = ["serde"] } # For monetary amounts
chrono = { version = "0.4", features = ["serde"] } # For dates/times

[dev-dependencies]
# Add test dependencies
tokio = { version = "1", features = ["test-util"] }