# /home/inno/elights_jobes-research/cryptography-exchange/Cargo.toml
[package]
name = "cryptography-exchange"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0"
rust_decimal = "1"
rust_decimal_macros = "1"

# Monero specific - use appropriate crate versions
monero = { version = "0.17", optional = true } # Example, check latest

[features]
default = []
monero_support = ["dep:monero"]
# Add feature for btcpay if specific libraries are used beyond reqwest