# /home/inno/elights_jobes-research/cryptography-exchange/Cargo.toml
[package]
name = "cryptography-exchange"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Async
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"

# Serialization / Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "1.0"

# Configuration
dotenv = "0.15"
once_cell = "1.17"

# Utilities
log = "0.4"
uuid = { version = "1", features = ["v4"] }
rust_decimal = { version = "1.32", features = ["serde"] }
rust_decimal_macros = "1.32"
base64 = "0.21" # For potential signature verification (webhooks)

# Crypto Libraries (Monero - Feature Flag)
monero = { version = "0.17", optional = true } # Check latest version

[features]
default = []
# Enable Monero support specifically
monero_support = ["dep:monero"]

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }