# /home/inno/elights_jobes-research/tor-network/Cargo.toml
[package]
name = "tor-network"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.48", features = ["tcp-tokio", "dns", "noise", "yamux", "mplex"] } # Check for latest compatible version
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true } # If sending structured data
serde_json = { version = "1.0", optional = true } # If using JSON

# For CLI wallet
# std::io is usually sufficient, but add clap or similar if complex args needed
# clap = { version = "4", features = ["derive"], optional = true }

[features]
default = []
cli = [] # ["dep:clap"]
# Add features for specific behaviours if needed